fixed white-theme not showing correct button in user settings

--- a/theme.css
+++ b/theme.css
@@ -4161,6 +4161,9 @@ span {
     position:absolute;
     bottom:0
 }
+#user-profile-modal .actions .pending .pending-actions .btn{
+
+}
 #user-profile-modal .header .discord-tag {
     position: absolute;
     left: 50%;
@@ -4501,9 +4504,9 @@ span {
     display: none;
 }
 
-div[data-reactroot]:not(.platform-osx):not(.platform-win) .theme-light+span .user-settings-modal .tab-bar.SIDE .tab-bar-item:nth-of-type(8),
-div.platform-win .theme-light+span .user-settings-modal .tab-bar.SIDE .tab-bar-item:nth-of-type(9),
-div.platform-osx .theme-light+span .user-settings-modal .tab-bar.SIDE .tab-bar-item:nth-of-type(9) {
+div[data-reactroot]:not(.platform-osx):not(.platform-win) .theme-light+span .user-settings-modal .tab-bar.SIDE .tab-bar-item:nth-of-type(9),
+div.platform-win .theme-light+span .user-settings-modal .tab-bar.SIDE .tab-bar-item:nth-of-type(10),
+div.platform-osx .theme-light+span .user-settings-modal .tab-bar.SIDE .tab-bar-item:nth-of-type(10) {
     box-shadow: 0 2px 10px rgba(240, 71, 71, .3);
     border: 3px solid #F04747;
     width: 80px;
